--- a/EngineSigma.Editor/MainWindow.xaml
+++ b/EngineSigma.Editor/MainWindow.xaml
@@ -81,6 +81,7 @@
                                              Foreground="White"
                                              FontSize="20"
                                              Height="50"
+                                             x:Name="test"
                                              Margin="0,5,0,0"
                                              IsChecked="True"
                                              Command="{Binding HomeViewCommand}"/>
@@ -126,3 +127,18 @@
         </Border>
         </DockPanel>
 </Window>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
